lib/tests/fixtures/compiler/evaluation/inline_epp_bad_key.pp
inline_epp(@(TEMPLATE), { 5 => 5 })
  <%- | Integer $foo | %->
  |- TEMPLATE
